--- a/diaroGonza/web.html
+++ b/diaroGonza/web.html
@@ -14,5 +14,8 @@
             <li>About me</li>
         </ul>
     </section>
+    <button id="theme-toggle-btn">Cambiar Tema</button>
+
+    <script src="index.js"></script>
 </body>
 </html>
