modified index.html and diarioA.txt

--- a/diarioAlumno/index.html
+++ b/diarioAlumno/index.html
@@ -14,19 +14,52 @@
     <main>
       <section class="diario">
         <h2>Felipe Rodriguez Suarez</h2>
-        <p>Un poco de mi dia a dia.</p>
-        <ul>
-          <li>Me levanto</li>
-          <li>Desayuno</li>
-          <li>Voy al trabajo</li>
-          <li>Almuerzo</li>
-          <li>Salgo del trabajo</li>
-          <li>Voy al coche</li>
-          <li>Llego a casa</li>
-          <li>Enciendo el portatil</li>
-          <li>Entro en MASTERMIND</li>
-          <li>¡Me pongo a estudiar!</li>
-        </ul>
+      </section>
+      <section>
+        <p>Capítulo 1: El Despertar</p>
+        <p>
+          En un rincón soleado de Las Palmas de Gran Canaria, vive un joven
+          llamado Felipe. Sus días transcurren entre tareas cotidianas: el café
+          matutino, las llamadas con amigos y las caminatas por la playa. Pero
+          hay algo que lo hace brillar con entusiasmo: la Academia Mastermind.
+        </p>
+      </section>
+      <section>
+        <p>Capítulo 2: El Portal Mágico</p>
+        <p>
+          Al caer la tarde, Felipe se sienta frente a su computadora. La
+          pantalla parpadea, y de repente, se abre un portal mágico. ¡Es la
+          plataforma de la Academia! Allí, los cursos esperan como tesoros
+          escondidos. Felipe se frota las manos, listo para sumergirse en el
+          conocimiento.
+        </p>
+      </section>
+      <section>
+        <p>Capítulo 3: Los Grandes Maestros</p>
+        <p>
+          En la Academia, Felipe encuentra a los Grandes Maestros: expertos en
+          marketing, finanzas, desarrollo personal y más. Cada lección es como
+          un hechizo que despierta su mente. Felipe toma notas, se emociona y se
+          sumerge en debates virtuales con otros aprendices.
+        </p>
+      </section>
+      <section>
+        <p>Capítulo 4: Las Noches Estrelladas</p>
+        <p>
+          Cuando la luna se alza en el cielo, Felipe sigue estudiando. Las
+          noches se llenan de ideas, proyectos y sueños. ¿Cómo aplicará todo
+          esto en su vida? ¿Qué negocios creará? ¿Qué historias escribirá? Las
+          estrellas parecen susurrarle secretos.
+        </p>
+      </section>
+      <section>
+        <p>Capítulo 5: El Futuro Brillante</p>
+        <p>
+          Felipe cierra su diario con una sonrisa. La Academia Mastermind es su
+          faro, su brújula. Sabe que cada curso es un paso hacia su futuro
+          brillante. Mañana, al despertar, seguirá su rutina cotidiana, pero con
+          un corazón lleno de posibilidades.
+        </p>
       </section>
     </main>
   </body>
