--- a/diarioAlumno/index.html
+++ b/diarioAlumno/index.html
@@ -12,11 +12,8 @@
       <h1>Mastermind GitHub</h1>
     </header>
     <main>
-      <section class="diario">
-        <h2>Felipe Rodriguez Suarez</h2>
-      </section>
       <section>
-        <p>Capítulo 1: El Despertar</p>
+        <h2>Capítulo 1: El Despertar</h2>
         <p>
           En un rincón soleado de Las Palmas de Gran Canaria, vive un joven
           llamado Felipe. Sus días transcurren entre tareas cotidianas: el café
@@ -25,7 +22,7 @@
         </p>
       </section>
       <section>
-        <p>Capítulo 2: El Portal Mágico</p>
+        <h2>Capítulo 2: El Portal Mágico</h2>
         <p>
           Al caer la tarde, Felipe se sienta frente a su computadora. La
           pantalla parpadea, y de repente, se abre un portal mágico. ¡Es la
@@ -35,7 +32,7 @@
         </p>
       </section>
       <section>
-        <p>Capítulo 3: Los Grandes Maestros</p>
+        <h2>Capítulo 3: Los Grandes Maestros</h2>
         <p>
           En la Academia, Felipe encuentra a los Grandes Maestros: expertos en
           marketing, finanzas, desarrollo personal y más. Cada lección es como
@@ -44,7 +41,7 @@
         </p>
       </section>
       <section>
-        <p>Capítulo 4: Las Noches Estrelladas</p>
+        <h2>Capítulo 4: Las Noches Estrelladas</h2>
         <p>
           Cuando la luna se alza en el cielo, Felipe sigue estudiando. Las
           noches se llenan de ideas, proyectos y sueños. ¿Cómo aplicará todo
@@ -53,7 +50,7 @@
         </p>
       </section>
       <section>
-        <p>Capítulo 5: El Futuro Brillante</p>
+        <h2>Capítulo 5: El Futuro Brillante</h2>
         <p>
           Felipe cierra su diario con una sonrisa. La Academia Mastermind es su
           faro, su brújula. Sabe que cada curso es un paso hacia su futuro
@@ -61,6 +58,10 @@
           un corazón lleno de posibilidades.
         </p>
       </section>
+      <div>
+        <h3>¡Gracias por ver mi diario!</h3>
+        <p>Felipe Marcial Rodriguez Suarez</p>
+      </div>
     </main>
   </body>
 </html>
